policies/blocknodeport-policy.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Service"]
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sblocknodeport
  annotations:
    description: Disallows all Services with type NodePort.
spec:
  crd:
    spec:
      names:
        kind: K8sBlockNodePort
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sblocknodeport

      violation[{"msg": msg}] {
        input.review.kind.kind == "Service"
        input.review.object.spec.type == "NodePort"
        msg := "User is not allowed to create service of type NodePort"
      }
