policies/externalip-policy.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sExternalIPs
metadata:
  name: external-ips
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Service"]
  parameters:
    allowedIPs:
    - "203.0.113.0"
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sexternalips
  annotations:
    description: "Restricts Services from containing externalIPs except those in a provided allowlist."
spec:
  crd:
    spec:
      names:
        kind: K8sExternalIPs
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            allowedIPs:
              type: array
              items:
                type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sexternalips

      violation[{"msg": msg}] {
        input.review.kind.kind == "Service"
        input.review.kind.group == ""
        allowedIPs := {ip | ip := input.parameters.allowedIPs[_]}
        externalIPs := {ip | ip := input.review.object.spec.externalIPs[_]}
        forbiddenIPs := externalIPs - allowedIPs
        count(forbiddenIPs) > 0
        msg := sprintf("service has forbidden external IPs: %v", [forbiddenIPs])
      }
